# spinet

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format-check.yml  cmake.yml
example/address/: resolve.cpp
example/echo/: cmd_client.cpp
example/echo/async/: client.cpp  client2.cpp  server.cpp
example/http/keep_alive/: server.cpp
example/http/simple/: server.cpp
example/include/: util.h
include/: spinet.h
include/spinet/: client.h  server.h  timer.h
include/spinet/core/: address.h  error.h  handle.h  result.h  tcp_socket.h
src/: client.cpp  server.cpp  timer.cpp  util.h
src/core/: address.cpp  error.cpp  handle.cpp  result.cpp  runtime.cpp  runtime.h  tcp_socket.cpp
